--- a/level1-task3/index.html
+++ b/level1-task3/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>CODSOFT Project</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+    <title>Calculator</title>
 </head>
 <body>
-    <h1>My Project</h1>
-    <script src="src/java.js"></script>
+    <div id="calculator">
+        <input id="display" readonly>
+        <div id="buttons">
+            <button data-value="+" class="operator-btn">+</button>
+            <button data-value="7">7</button>
+            <button data-value="8">8</button>
+            <button data-value="9">9</button>
+            <button data-value="-" class="operator-btn">-</button>
+            <button data-value="4">4</button>
+            <button data-value="5">5</button>
+            <button data-value="6">6</button>
+            <button data-value="*" class="operator-btn">*</button>
+            <button data-value="1">1</button>
+            <button data-value="2">2</button>
+            <button data-value="3">3</button>
+            <button data-value="/" class="operator-btn">/</button>
+            <button data-value="0">0</button>
+            <button data-value=".">.</button>
+            <button id="calculate" class="operator-btn">=</button>
+            <button id="clear" class="operator-btn">C</button>
+            
+        </div>
+    </div>
+   <script src="src/java.js"></script>
 </body>
 </html>
