added more and rearranged buttons

--- a/level1-task3/index.html
+++ b/level1-task3/index.html
@@ -26,7 +26,9 @@
             <button data-value="0">0</button>
             <button data-value=".">.</button>
             <button id="calculate" class="operator-btn">=</button>
-            <button id="clear" class="operator-btn">C</button>
+            <button id="clear" class="operator-btn">AC</button>
+            <button id="delete" class="operator-btn">DEL</button>
+            <button id="percent" class="operator-btn">%</button>
             
         </div>
     </div>
