--- a/level1-task2/index.html
+++ b/level1-task2/index.html
@@ -7,14 +7,18 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
-  <h1> Hi, I am Zandile Maleka</h1> 
-  <p> Web developer passionate about creating
-    beautiful and functional websites
-  </p> 
-  </header>
-  <main>
-    <h2> About Me</h2>
-  </main>
+   <div class= "main">
+    <div class="navbar">
+        <img src="images/grad.jpg" class="logo" width="100" height="100" alt="Logo">
+        <ul>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#projects">PROJECTS</a></li>
+            <li><a href="#skills">SKILLS</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+
+    </div>
+
+   </div>
 </body>
 </html>
