Added and styled images

--- a/level1-task2/index.html
+++ b/level1-task2/index.html
@@ -16,9 +16,24 @@
             <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#skills">SKILLS</a></li>
             <li><a href="#contact">CONTACT</a></li>
-
+</ul>
     </div>
+<div class="info">
+    <h3> Hi, I am <span>Zandile Maleka</span></h3>
+    <h1> <span>W</span>EB <span>D</span>ESIGNER </h1>
+    <h3> Web designer and web developer with a passion for 
+        creating beautiful <br> and functional websites. I am a quick learner and 
+        always eager to learn new skills <br>and technologies. I am currently 
+        looking for opportunities to work on exciting <br> projects and grow my 
+        skills as a web developer.</h3>
+        <a href="#">Hire Me</a>
+        <a href="#">Download CV</a>
 
+</div>
+
+    <div class="image">
+        <img src="images/Untitled.jpg" class="design">
+    </div>
    </div>
 </body>
 </html>
