Added styling to the buttons

--- a/level1-task2/index.html
+++ b/level1-task2/index.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <title>Portfolio</title>
 </head>
 <body>
    <div class= "main">
     <div class="navbar">
-        <img src="images/grad.jpg" class="logo" width="100" height="100" alt="Logo">
+        <a href="#" class="logo"><span>Zandile</span></a>
         <ul>
             <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#skills">SKILLS</a></li>
             <li><a href="#contact">CONTACT</a></li>
+            <i class="bx bx-menu" id="menu"></i>  
 </ul>
+
     </div>
 <div class="info">
     <h3> Hi, I am <span>Zandile Maleka</span></h3>
-    <h1> <span>W</span>EB <span>D</span>ESIGNER </h1>
-    <h3> Web designer and web developer with a passion for 
+    <h1> <span>W</span>EB <span>D</span>EVELOPER </h1>
+    <h3> Web developer and web desginer with a passion for 
         creating beautiful <br> and functional websites. I am a quick learner and 
         always eager to learn new skills <br>and technologies. I am currently 
         looking for opportunities to work on exciting <br> projects and grow my 
         skills as a web developer.</h3>
+    
+    <br>
         <a href="#">Hire Me</a>
         <a href="#">Download CV</a>
 
@@ -35,5 +40,6 @@
         <img src="images/Untitled.jpg" class="design">
     </div>
    </div>
+<script src="src/java.js"></script>
 </body>
 </html>
