Added styling to different sections

--- a/level1-task2/index.html
+++ b/level1-task2/index.html
@@ -14,8 +14,8 @@
         <ul>
             <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
-            <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#skills">SKILLS</a></li>
+            <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#contact">CONTACT</a></li>
             <i class="bx bx-menu" id="menu"></i>  
 </ul>
@@ -24,11 +24,11 @@
 <div class="info">
     <h3> Hi, I am <span>Zandile Maleka</span></h3>
     <h1> <span>W</span>EB <span>D</span>EVELOPER </h1>
-    <h3> Web developer and web desginer with a passion for 
-        creating beautiful <br> and functional websites. I am a quick learner and 
-        always eager to learn new skills <br>and technologies. I am currently 
-        looking for opportunities to work on exciting <br> projects and grow my 
-        skills as a web developer.</h3>
+    <p> Web developer and web desginer with a passion for 
+        creating beautiful and functional websites. I am a quick learner and 
+        always eager to learn new skills and technologies. I am currently 
+        looking for opportunities to work on exciting projects and grow my 
+        skills as a web developer.</p>
     
     <br>
         <a href="#">Hire Me</a>
@@ -40,6 +40,102 @@
         <img src="images/Untitled.jpg" class="design">
     </div>
    </div>
+   <section id="about">
+<div class="about-box">
+    <div class="about-info">
+    <h1> <span> About Me</span></h1>
+    <p> a passionate and detail-oriented web developer with a background in science and a love for creating clean,
+         responsive websites. I enjoy turning ideas into functional 
+        digital experiences and am always eager to learn, grow, and take on exciting new challenges</p>
+</div>
+<h2> <span id="skills">Skills</span></h2>
+<div class="skills">
+<ul>
+    <li>
+        <span> <i class="bx  bx-chevron-right"  ></i> HTML</span>
+    </li>
+    <li>
+        <span><i class='bx  bx-chevron-right'  ></i>  CSS</span>
+    </li>
+    <li>
+        <span><i class='bx  bx-chevron-right'  ></i> JavaScript</span>
+    </li>
+</ul>
+<ul>
+    <li>
+        <span> <i class='bx  bx-chevron-right'  ></i> React</span>
+    </li>
+    <li>
+        <span> <i class='bx  bx-chevron-right'  ></i> Node</span>
+    </li>
+    <li>
+        <span><i class='bx  bx-chevron-right'  ></i> MySQL</span>
+    </li>
+</ul>
+</div>
+</div>
+<img src="images/me.jpg" alt="">
+   </section>
+   <section id="projects" class="projects">
+    <h2 class="heading">Projects</h2>
+    <div class="projects-box">
+        <div class="projects-card">
+        <img src="images/pro1.png" alt="">
+        <h3> Project 1</h3>
+        <p> A responsive weather app that displays real-time weather information for any city using a public weather API.
+             Built with HTML, CSS, and JavaScript, it fetches data, and updates the UI dynamically.
+            </p>
+              <div class="btn">See Project</div>
+</div>
+        <div class="projects-card">
+        <img src="images/pro2.png" alt="">
+        <h3> Project 2</h3>
+        <p> A simple, interactive app that displays the current time across multiple time zones. Built with HTML, CSS, 
+            and JavaScript, it dynamically updates clocks for major cities and supports real-time synchronization</p>
+              <div class="btn">See Project</div>
+</div>
+        <div class="projects-card">
+        <img src="images/pro3.png" alt="">
+        <h3> Project 3</h3>
+        <p>An intelligent web app that generates personalized recipes based on ingredients you enter. Powered 
+            by an AI API and built with HTML, CSS, and JavaScript,
+             it helps users cook creatively with what they have</p>
+              <div class="btn">See Project</div>
+</div>
+    </div>
+   </section>
+   <section class="contact" id="contact">
+    <h2 class="heading">Contact <span>Me</span></h2>
+    <form action="#">
+        <div class="input-group">
+            <div class="input-box"> 
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email">
+            </div>
+            <div class="input-box"> 
+                <input type="number" placeholder="Phone Number">
+                <input type="text" placeholder="Subject">
+            </div>
+             </div>
+            <div class="input-group-2">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </div>
+    </form>
+   </section>
+   <footer class="footer">
+    <div class="social">
+        <ul>
+            <li>
+        <a href="https://www.facebook.com/zandile.maleka.5" target="_blank"><i class='bx bxl-facebook'></i></a></li>
+        <li><a href="https://www.instagram.com/zandilemaleka/" target="_blank"><i class='bx bxl-instagram' ></i></a></li>
+        <li><a href="https://www.linkedin.com/in/zandile-maleka-0b1a4b1b5/" target="_blank"><i class='bx bxl-linkedin' ></i></a></li>
+        <li><a href="https://www.linkedin.com/in/zandile-maleka-0b1a4b1b5/" target="_blank"><i class='bx bxl-github' ></i></a></li>
+
+
+    </div>
+</ul>
+   </footer>
 <script src="src/java.js"></script>
 </body>
 </html>
