styled the footer

--- a/level1-task2/index.html
+++ b/level1-task2/index.html
@@ -131,10 +131,14 @@
         <li><a href="https://www.instagram.com/zandilemaleka/" target="_blank"><i class='bx bxl-instagram' ></i></a></li>
         <li><a href="https://www.linkedin.com/in/zandile-maleka-0b1a4b1b5/" target="_blank"><i class='bx bxl-linkedin' ></i></a></li>
         <li><a href="https://www.linkedin.com/in/zandile-maleka-0b1a4b1b5/" target="_blank"><i class='bx bxl-github' ></i></a></li>
-
-
     </div>
 </ul>
+    <div class="footer-text">
+        <p> &copy; 2025 Zandile Maleka. All rights reserved.</p>
+    </div>
+    <div class="scroll-top">
+        <a href="#home"><i class='bx bx-chevron-up'></i></a>
+    </div>
    </footer>
 <script src="src/java.js"></script>
 </body>
