--- a/level1-task2/index.html
+++ b/level1-task2/index.html
@@ -17,7 +17,7 @@
             <li><a href="#skills">SKILLS</a></li>
             <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#contact">CONTACT</a></li>
-            <i class="bx bx-menu" id="menu"></i>  
+           
 </ul>
 
     </div>
@@ -31,8 +31,8 @@
         skills as a web developer.</p>
     
     <br>
-        <a href="#">Hire Me</a>
-        <a href="#">Download CV</a>
+        <a href="#contact" class="btn">Hire Me</a>
+        <a href="files/Software_Engineer_CV.pdf">Download CV</a>
 
 </div>
 
@@ -44,7 +44,7 @@
 <div class="about-box">
     <div class="about-info">
     <h1> <span> About Me</span></h1>
-    <p> a passionate and detail-oriented web developer with a background in science and a love for creating clean,
+    <p> I am a passionate and detail-oriented web developer with a background in science and a love for creating clean,
          responsive websites. I enjoy turning ideas into functional 
         digital experiences and am always eager to learn, grow, and take on exciting new challenges</p>
 </div>
@@ -105,7 +105,7 @@
     </div>
    </section>
    <section class="contact" id="contact">
-    <h2 class="heading">Contact <span>Me</span></h2>
+    <h2 class="heading" id="contact-info">Contact Me</h2>
     <form action="#">
         <div class="input-group">
             <div class="input-box"> 
