Linked Cv to the  Download btn

--- a/level1-task2/index.html
+++ b/level1-task2/index.html
@@ -128,9 +128,9 @@
         <ul>
             <li>
         <a href="https://www.facebook.com/zandile.maleka.5" target="_blank"><i class='bx bxl-facebook'></i></a></li>
-        <li><a href="https://www.instagram.com/zandilemaleka/" target="_blank"><i class='bx bxl-instagram' ></i></a></li>
-        <li><a href="https://www.linkedin.com/in/zandile-maleka-0b1a4b1b5/" target="_blank"><i class='bx bxl-linkedin' ></i></a></li>
-        <li><a href="https://www.linkedin.com/in/zandile-maleka-0b1a4b1b5/" target="_blank"><i class='bx bxl-github' ></i></a></li>
+        <li><a href="https://www.instagram.com/zandil_emaleka/" target="_blank"><i class='bx bxl-instagram' ></i></a></li>
+        <li><a href="https://www.linkedin.com/in/zandile-maleka" target="_blank"><i class='bx bxl-linkedin' ></i></a></li>
+        <li><a href="https://github.com/zandilemaleka" target="_blank"><i class='bx bxl-github' ></i></a></li>
     </div>
 </ul>
     <div class="footer-text">
