--- a/level1-task1/index.html
+++ b/level1-task1/index.html
@@ -13,7 +13,16 @@
         <img src="images/logo.jpg" class="logo" width="100px" height="100px">
 
     </div>
+<div class="menu">
+    <ul>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">CONTACT</a></li>
+    </ul>
 
+</div>
 </div>
     </div>
 </body>
