Added basic styling to the project

--- a/level1-task1/index.html
+++ b/level1-task1/index.html
@@ -23,6 +23,11 @@
     </ul>
 
 </div>
+<div class="search">
+    <input type="text" name="" placeholder="Search..." class="srch">
+    <button type="submit" class="btn">Search</button>
+
+</div>
 </div>
     </div>
 </body>
