--- a/level1-task1/index.html
+++ b/level1-task1/index.html
@@ -25,9 +25,18 @@
 </div>
 <div class="search">
     <input type="text" name="" placeholder="Search..." class="srch">
-    <button type="submit" class="btn">Search</button>
+    <a href="#"><button type="submit" class="btn">Search</button></a>
 
 </div>
+</div>
+<div class="content">
+    <h1> The Chapter Chasers <br>  <span>Bookclub</span> </h1>
+    <p class="par"> Join our vibrant book club where stories come to life 
+        and friendships are forged over shared pages. Whether you're a voracious 
+        reader or just starting your literary journey, our community 
+        welcomes you with open arms </p>
+        <button class="cn"><a href="#">JOIN US</a></button>
+
 </div>
     </div>
 </body>
