Added information content

--- a/level1-task1/index.html
+++ b/level1-task1/index.html
@@ -32,7 +32,7 @@
 <div class="content">
     <h1> The Chapter Chasers <br>  <span>Bookclub</span> </h1>
     <p class="par"> Join our vibrant book club where stories come to life 
-        and friendships are forged over shared pages. Whether you're a voracious 
+        and friendships are forged over shared. Whether you're a voracious 
         reader or just starting your literary journey, our community 
         welcomes you with open arms </p>
         <button class="cn"><a href="#">JOIN US</a></button>
