Styled the form and the type input

--- a/level1-task1/index.html
+++ b/level1-task1/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="src/style.css">
     <title>Landing Page</title>
 </head>
@@ -36,8 +37,27 @@
         reader or just starting your literary journey, our community 
         welcomes you with open arms </p>
         <button class="cn"><a href="#">JOIN US</a></button>
+        <div class="form">
+            <h2>
+                Login Here
+            </h2>
+            <input type="email" name="email" placeholder="Enter Email" class="email">
+            <input type="password" name="password" placeholder="Enter Password" class="password">
+            <button type="submit" class="btnn"> <a href="#">Login</a></button>
+            <p class="link">Don't have an account<br>
+            <a href="#">Sign up </a>here</p> 
+            <p class="liw"> Log in with</p>
+            <div class="icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+
+        </div>
 
 </div>
     </div>
+
 </body>
 </html>
