Added styling to the form input

--- a/level1-task1/index.html
+++ b/level1-task1/index.html
@@ -92,7 +92,7 @@
 </section>
 <section id="contact" class="section">
 <h2> <span> Contact Us</span></h2>
-<form action="#">
+<form action="#" class="form-row">
     <input type="text" name="name" placeholder="Your Name" class="name">
     <input type="email" name="email" placeholder="Your Email" class="email">
     <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
