--- a/level1-task1/index.html
+++ b/level1-task1/index.html
@@ -33,9 +33,9 @@
 <div class="content">
     <h1> The Chapter Chasers <br>  <span>Bookclub</span> </h1>
     <p class="par"> Join our vibrant book club where stories come to life 
-        and friendships are forged over shared. Whether you're a voracious 
+        and friendships are forged over shared stories. Whether you're a voracious 
         reader or just starting your literary journey, our community 
-        welcomes you with open arms </p>
+        welcomes you with open arms. </p>
         <button class="cn"><a href="#">JOIN US</a></button>
         <div class="form">
             <h2>
@@ -61,7 +61,7 @@
 <section class="section" id="about">
 <h2> <span>About Us</span></h2>
 <p> We are passionate community of book lovers who 
-    gather to explore diverse stories, disucss powerful narratives,
+    gather to explore diverse stories, discuss powerful narratives,
     and build lasting connections through reading.
 </p>
 <div class="images-row">
